changed min height of selections div to 100px to avoid collapsing box when removing child content

--- a/assets/stylesheets/main-game.css
+++ b/assets/stylesheets/main-game.css
@@ -139,6 +139,7 @@
     align-items: center;
     border-radius: 25px;
     border: 2px solid #BAD7C8;
+    min-height: 100px;
 }
 
 .wager-selections, .bet-limits, .bet-history-table-container {
